--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,15 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "baseUrl": "src",
-    "paths": {
-      "@components/*": ["components/*"],
-      "@assets/*": ["assets/*"],
-      "@utils/*": ["utils/*"],
-      "@api/*": ["api/*"]
-    },
-    "jsx": "react"
+    "module": "CommonJS",
+    "target": "ES6"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "build"]
+  "exclude": ["node_modules"]
 }
