--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "@mantine/core": "^7.15.3",
+    "@mantine/dates": "^7.15.3",
+    "@mantine/form": "^7.15.3",
     "@mantine/hooks": "^7.15.3",
+    "@mantine/modals": "^7.15.3",
+    "@mantine/nprogress": "^7.15.3",
+    "@mantine/spotlight": "^7.15.3",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1"
