--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "module": "CommonJS",
-    "target": "ES6"
+    "target": "ES6",
+    "jsx": "react-jsx",
+    "checkJs": true
   },
   "exclude": ["node_modules"]
 }
