--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@mantine/modals": "^7.15.3",
     "@mantine/nprogress": "^7.15.3",
     "@mantine/spotlight": "^7.15.3",
+    "@supabase/supabase-js": "^2.47.13",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
