--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mantine/nprogress": "^7.15.3",
     "@mantine/spotlight": "^7.15.3",
     "@reduxjs/toolkit": "^2.5.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
@@ -19,7 +20,8 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "typescript": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +48,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "postcss": "^8.4.49",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1"
